--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,12 @@
     <string name="app_name">Resabev</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Biatriz Basillio</string>
-    <string name="nav_header_subtitle">Supervisora</string>
+    <string name="nav_header_title">Nome do Usuario</string>
+    <string name="nav_header_subtitle">Funcoes</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="nav_header_subtitleid">ID: 007070</string>
-    <string name="nav_header_logout">Logout</string>
+    <string name="nav_header_logout">Sair</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_recipes">Receitas</string>
